Add new reaction: rip 😇

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -70,6 +70,7 @@ common:
     congrats: "おめでとう"
     angry: "おこ"
     confused: "こまこまのこまり"
+    rip: "RIP"
     pudding: "Pudding"
 
   note-placeholders:
