--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -710,6 +710,7 @@ desktop/views/components/settings.vue:
   show-reply-target: "リプライ先を表示する"
   show-my-renotes: "自分の行ったRenoteをタイムラインに表示する"
   show-renoted-my-notes: "Renoteされた自分の投稿をタイムラインに表示する"
+  show-local-renotes: "Renoteされたローカルの投稿の投稿をタイムラインに表示する"
   show-maps: "マップの自動展開"
   show-maps-desc: "位置情報が添付された投稿のマップを自動的に展開します。"
 
@@ -1294,6 +1295,7 @@ mobile/views/pages/settings.vue:
   show-reply-target: "リプライ先を表示する"
   show-my-renotes: "自分の行ったRenoteを表示する"
   show-renoted-my-notes: "Renoteされた自分の投稿を表示する"
+  show-local-renotes: "Renoteされたローカルの投稿の投稿をタイムラインに表示する"
   post-style: "投稿の表示スタイル"
   post-style-standard: "標準"
   post-style-smart: "スマート"
