--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -926,6 +926,11 @@ desktop/views/pages/admin/admin.unsuspend-user.vue:
   unsuspend: "凍結の解除"
   unsuspended: "凍結を解除しました"
 
+desktop/views/pages/admin/admin.verify-user.vue:
+  verify-user: "ユーザーの公式アカウント設定"
+  verify: "公式アカウントにする"
+  verified: "公式アカウントにしました"
+
 desktop/views/pages/deck/deck.tl-column.vue:
   is-media-only: "メディア投稿のみ"
   is-media-view: "メディアビュー"
