--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -931,6 +931,11 @@ desktop/views/pages/admin/admin.verify-user.vue:
   verify: "公式アカウントにする"
   verified: "公式アカウントにしました"
 
+desktop/views/pages/admin/admin.unverify-user.vue:
+  unverify-user: "ユーザーの公式アカウント解除"
+  unverify: "公式アカウントを解除する"
+  unverified: "公式アカウントを解除しました"
+
 desktop/views/pages/admin/admin.notes-chart.vue:
   title: "投稿"
   local: "ローカル"
