--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -777,11 +777,13 @@ misskeyUpdated: "Misskeyが更新されました！"
 whatIsNew: "更新情報を見る"
 translate: "翻訳"
 translatedFrom: "{x}から翻訳"
-pubSub: "Pub/Subのアカウント"
-lastRequest: "直近の通信"
 accountDeletionInProgress: "アカウントの削除が進行中です"
 usernameInfo: "サーバー上であなたのアカウントを一意に識別するための名前。アルファベット(a~z, A~Z)、数字(0~9)、およびアンダーバー(_)が使用できます。ユーザー名は後から変更することは出来ません。"
 keepCw: "CWを維持する"
+pubSub: "Pub/Subのアカウント"
+lastRequest: "直近の通信"
+resolved: "解決済み"
+unresolved: "未解決"
 
 _accountDelete:
   accountDelete: "アカウントの削除"
