--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -781,7 +781,7 @@ accountDeletionInProgress: "Account deletion is currently in progress"
 usernameInfo: "A name that identifies your account from others on this server.  You can use the alphabet (a~z, A~Z), digits (0~9) or underscores (_). Usernames can not be changed later."
 keepCw: "Keep Content Warning"
 pubSub: "Pub/Sub Accounts"
-lastRequest: "Last communication"
+lastCommunication: "Last communication"
 resolved: "Resolved"
 unresolved: "Unresolved"
 _accountDelete:
