--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -59,6 +59,7 @@ mention: "Mention"
 mentions: "Mentions"
 directNotes: "Direct notes"
 importAndExport: "Import / Export"
+instanceMute: "Instance Mutes"
 import: "Import"
 export: "Export"
 files: "Files"
@@ -957,6 +958,11 @@ _wordMute:
   soft: "Soft"
   hard: "Hard"
   mutedNotes: "Muted notes"
+_instanceMute:
+  instanceMuteDescription: "Will mute any notes/renotes from the listed instances, including a user replying to a user from a muted instance."
+  instanceMuteDescription2: "Separate with newlines"
+  title: "Hides notes from listed instances"
+  heading: "List of instances to be muted"
 _theme:
   explore: "Explore Themes"
   install: "Install a theme"
