--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -588,6 +588,7 @@ smtpSecure: "SMTP 接続に暗黙的なSSL/TLSを使用する"
 smtpSecureInfo: "STARTTLS使用時はオフにします。"
 testEmail: "配信テスト"
 wordMute: "ワードミュート"
+instanceMute: "Instance Mutes"
 userSaysSomething: "{name}が何かを言いました"
 makeActive: "アクティブにする"
 display: "表示"
@@ -975,6 +976,12 @@ _wordMute:
   soft: "ソフト"
   hard: "ハード"
   mutedNotes: "ミュートされたノート"
+
+_instanceMute:
+  instanceMuteDescription: "Will mute any notes/renotes from the listed instances, including a user replying to a user from a muted instance."
+  instanceMuteDescription2: "Separate with newlines"
+  title: "Hides notes from listed instances"
+  heading: "List of instances to be muted"
 
 _theme:
   explore: "テーマを探す"
