Changed Ja-JP instance mute title string to one suggested by sousuke
Co-authored-by: sousuke0422 <sousuke20xx@gmail.com>

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -980,7 +980,7 @@ _wordMute:
 _instanceMute:
   instanceMuteDescription: "ミュートしましたインスタンスのユーザーの返信を含めて設定しましたインスタンスの全てのノートかRenoteをミュートします。"
   instanceMuteDescription2: "改行で区切って設定します"
-  title: "設定しましたインスタンスのノートを隠します"
+  title: "設定したインスタンスのノートを隠します。"
   heading: "ミュートするインスタンス"
 
 _theme:
