modify page load error page

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -705,6 +705,7 @@ currentVersion: "現在のバージョン"
 latestVersion: "最新のバージョン"
 youAreRunningUpToDateClient: "お使いのクライアントは最新です。"
 newVersionOfClientAvailable: "新しいバージョンのクライアントが利用可能です。"
+youShouldUpgradeClient: "このページを表示するためには、リロードして新しいバージョンのクライアントをご利用ください。"
 usageAmount: "使用量"
 capacity: "容量"
 inUse: "使用中"
